# django-and-react

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.ipynb  core_asgi.ini  core_uwsgi.ini  pyproject.toml  uwsgi-asgi.log  # 로그 파일 경로
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/biblebot/: chroma.sqlite3
api/migrations/: 0001_initial.py  0002_board.py  0003_board_image.py  0004_rename_image_board_thumbnail.py  0005_alter_board_thumbnail.py  0006_alter_board_thumbnail.py
biblebot/: chroma.sqlite3
core/: asgi.py  settings.py  urls.py
frontend/: package.json  urls.py  views.py  webpack.config.js
frontend/src/: board.js  index.js  models.js  read.js  service.js  update.js  writeBoard.js
frontend/src/components/: About.js  App.css  App.js  Board.css  Board.js  BoardList.css  BoardList.js  Dashboard.css  Dashboard.js  Home.js  IconMenu.css  IconMenu.js  Navbar.css  Navbar.js  Service.css  Service.js  SketchToImage.css  SketchToImage.js  Update.js  Write.css  Write.js
frontend/src/css/: read.css  update.css
frontend/static/frontend/: board.js  board.js.LICENSE.txt  main.js  main.js.LICENSE.txt  vendors-node_modules_canvg_lib_index_es_js.js
frontend/templates/frontend/: index.html
logs/: log
single_page/: models.py
single_page/migrations/: 0001_initial.py
static/frontend/: board.js  board.js.LICENSE.txt  main.js  main.js.LICENSE.txt  vendors-node_modules_dompurify_dist_purify_js.js
tests/: app.ipynb
web_socket/: consumers.py  routing.py  urls.py  views.py
web_socket/templates/web_socket/: index.html
